# guido

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-drafter.yml  visual-tests.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/advanced/: README.md  app-lifecycle.md  background-threads.md  components.md  context.md  dynamic-children.md  wayland.md  widget-ref.md
book/src/animations/: README.md  properties.md  springs.md  timing.md  transitions.md
book/src/architecture/: README.md  events.md  overview.md  rendering.md
book/src/building-ui/: README.md  borders.md  colors.md  elevation.md  images.md  styling.md  text-input.md  text.md
book/src/concepts/: README.md  container.md  layout.md  reactive-model.md  widgets.md
book/src/getting-started/: README.md  examples.md  hello-world.md  installation.md
book/src/interactivity/: README.md  events.md  ripples.md  state-layer.md  states.md
book/src/transforms/: README.md  animated.md  basics.md  nested.md  origins.md
book/theme/css/: custom.css
docs/: ARCHITECTURE.md  CONTEXT.md  IMAGES.md  REACTIVE.md  RENDERER.md  RENDERER_V2_NEXT_STEPS.md  RIPPLE_DESIGN.md  STATE_LAYER.md  STYLING.md  TRANSFORMS.md
examples/: animation_example.rs  children_example.rs  clip_test.rs  component_example.rs  effect_cleanup_test.rs  elevation_example.rs  flex_layout_test.rs  image_example.rs  image_fit_none_test.rs  layout_stats_test.rs  multi_surface.rs  nested_transform_example.rs  perf_stress_test.rs  reactive_example.rs  render_stats_test.rs  renderer_v2_test.rs  rounded_hitbox_test.rs  rounded_transform_test.rs  scroll_example.rs  scroll_mixed_content.rs  select_example.rs  service_example.rs  showcase.rs  simple_text_transform.rs  state_layer_example.rs  status_bar.rs  surface_properties_example.rs  test_dynamic.rs  text_input_example.rs  text_input_transform_test.rs  text_styling_example.rs  text_transform_example.rs  transform_events_test.rs  transform_example.rs  transform_origin_test.rs  transform_scale_test.rs  transform_test.rs  transform_test_3level.rs  transform_test_nested.rs  transform_test_origin.rs  (+4 more)
guido-macros/: Cargo.toml
guido-macros/src/: lib.rs
src/: image_metadata.rs  jobs.rs  layout_stats.rs  lib.rs  render_stats.rs  surface.rs  surface_manager.rs  transform.rs  transform_origin.rs  tree.rs  widget_ref.rs
src/animation/: animatable.rs  mod.rs  spring.rs  timing.rs  transform.rs
src/layout/: flex.rs  flex_layout.rs  mod.rs  overlay.rs
src/platform/: mod.rs  wayland.rs
src/reactive/: clipboard.rs  computed.rs  context.rs  cursor.rs  effect.rs  focus.rs  into_signal.rs  invalidation.rs  layout_arena.rs  maybe_dyn.rs  memo.rs  mod.rs  owner.rs  runtime.rs  service.rs  signal.rs  storage.rs
src/renderer/: commands.rs  constants.rs  context.rs  flatten.rs  gpu.rs  gpu_context.rs  image_quad.rs  image_shader.wgsl  image_texture.rs  mod.rs  paint_context.rs  pipeline.rs  primitives.rs  render.rs  shader.wgsl  shader_v2.wgsl  text.rs  text_measurer.rs  text_quad.rs  text_quad_shader.wgsl  text_texture.rs  texture_shader.wgsl  textured_quad_shader.wgsl  textured_vertex.rs  tree.rs  types.rs
src/renderer_v2/: TODO.md  commands.rs  context.rs  flatten.rs  gpu.rs  image_quad.rs  image_shader.wgsl  mod.rs  render.rs  shader_v2.wgsl  text_quad.rs  text_quad_shader.wgsl  tree.rs
src/widgets/: children.rs  column.rs  container.rs  font.rs  image.rs  into_child.rs  mod.rs  row.rs  scroll.rs  state_layer.rs  text.rs  text_input.rs  widget.rs
src/widgets/container/: animations.rs  mod.rs  ripple.rs  scrollable.rs
tests/: signal_fields.rs
visual_tests/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  sway-config
visual_tests/scripts/: run-tests.sh  update-references.sh
visual_tests/src/: capture.rs  compare.rs  lib.rs
visual_tests/tests/: visual_tests.rs
