[workspace]
members = [".", "guido-macros"]

[package]
name = "guido"
version = "0.1.0"
edition = "2024"
description = "A reactive Rust GUI library using wgpu for Wayland layer shell widgets"
license = "MIT"

[dependencies]
guido-macros = { path = "guido-macros" }
wgpu = { version = "28.0", features = ["fragile-send-sync-non-atomic-wasm"] }
bytemuck = { version = "1.24", features = ["derive"] }
glyphon = "0.10"
cosmic-text = "0.16"
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-backend = { version = "0.3", features = ["client_system"] }
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
resvg = "0.45"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
bitflags = "2.4"
smallvec = "1.13"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "status_bar"
path = "examples/status_bar.rs"

[[example]]
name = "reactive_example"
path = "examples/reactive_example.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[[example]]
name = "image_example"
path = "examples/image_example.rs"

[[example]]
name = "text_input_example"
path = "examples/text_input_example.rs"
